# effective-mobile-test

./: .dockerignore  Dockerfile  README.md  compose.yml  pyproject.toml
backend/: .env.template  alembic.ini  create_fastapi_app.py  main.py  run_main.py
backend/alembic/versions/: 2024_09_24_1820-712d175ef5c2_create_products_and_orders_tables.py  2024_09_24_1945-740b0742a825_orders_auto_created_at.py
backend/api/api_v1/: __init__.py  orders.py  products.py
backend/core/: config.py
backend/core/models/: __init__.py  db_helper.py  orders.py  products.py
backend/core/schemas/: orders.py  products.py
backend/crud/: orders.py  products.py
backend/tests/: conftest.py  test_orders.py  test_products.py
