[tool.poetry]
name = "effective-mobile"
version = "0.1.0"
description = ""
authors = ["Brajenko <goshabrajenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
alembic = "^1.13.3"
uvicorn = "^0.30.6"
pydantic-settings = "^2.5.2"
gunicorn = "^23.0.0"
asyncpg = "^0.29.0"
orjson = "^3.10.7"
faker = "^29.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
pytest = "^8.3.3"
httpx = "^0.27.2"
anyio = "^4.6.0"
pytest-asyncio = "^0.24.0"
pytest-postgresql = "^6.1.1"
mock = "^5.1.0"

[tool.pytest.ini_options]
pythonpath = [
    ".", "backend"
]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="session"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
